--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  path_provider: ^1.6.1
+  path_provider: 
   sqflite: ^1.2.1
+  url_launcher: ^5.4.2
+  flutter_map: ^0.8.2
+  barcode_scan: ^2.0.1
 
 dev_dependencies:
   flutter_test:
